<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@android:color/black"
    android:paddingTop="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="450dp"
        android:contentDescription="@string/fotoprofile"
        app:srcCompat="@drawable/ic_person_outline_pink" />

    <TextView
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-220dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/Username"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/textView4"
        android:hint="@string/isiusername"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <View
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="46dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/textView7"
        android:hint="@string/isiname"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <View
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/loc"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_marginStart="18dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/textView8"
        android:hint="@string/isiloc"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <View
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView9"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />



    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/company"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/desc"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView27"
        android:layout_marginTop="7dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="154dp"
        android:src="@drawable/ic_favorite" />


    <View
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fab"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_marginStart="17dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/textView10"
        android:hint="@string/isicompany"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView21"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            app:tabTextColor="@android:color/white" />
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressdetail"/>








</RelativeLayout>

